--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="src/gridworld.jar"/>
 	<classpathentry kind="lib" path="src/javazoom.jar"/>
+	<classpathentry kind="lib" path="jl1.0.1.jar"/>
+	<classpathentry kind="lib" path="robot.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
